# Opensource-Communicator

./: .gitignore  AGENTS.md  CHANGELOG.md  PROTOCOL.md  README.md
.github/workflows/: build.yml
client/: CMakeLists.txt
client/resources/: communicator-dialogs.qss  resources.qrc
client/src/: main.cpp
client/src/audio/: AudioBridge.cpp  AudioBridge.h  AudioDeviceUtils.cpp  AudioDeviceUtils.h  CallRecorder.cpp  CallRecorder.h  ExternalMediaPauser.cpp  ExternalMediaPauser.h  IncomingRingPlayer.cpp  IncomingRingPlayer.h  MessageNotifyPlayer.cpp  MessageNotifyPlayer.h  RingbackPlayer.cpp  RingbackPlayer.h
client/src/calls/: CallManager.cpp  CallManager.h  CallTypes.h
client/src/chat/: ChatManager.cpp  ChatManager.h
client/src/demo/: DemoData.cpp  DemoData.h
client/src/network/: NetworkUtils.cpp  NetworkUtils.h
client/src/protocol/: AddressBookManager.cpp  AddressBookManager.h  CallHistoryParser.cpp  CallHistoryParser.h  CommunicatorClient.cpp  CommunicatorClient.h  ProtocolTypes.h  WsApiClient.cpp  WsApiClient.h  WsConnection.cpp  WsConnection.h
client/src/settings/: AppSettings.cpp  AppSettings.h  UserDataStore.cpp  UserDataStore.h
client/src/ui/: AddContactDialog.cpp  AddContactDialog.h  AppInstance.cpp  AppInstance.h  CallWindow.cpp  CallWindow.h  ChatDialog.cpp  ChatDialog.h  ConferenceDialog.cpp  ConferenceDialog.h  ContactRowWidget.cpp  ContactRowWidget.h  DialKeypadWidget.cpp  DialKeypadWidget.h  HelpDialog.cpp  HelpDialog.h  HistoryRowWidget.cpp  HistoryRowWidget.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  NativeScrollBars.cpp  NativeScrollBars.h  NotePopupDialog.cpp  NotePopupDialog.h  PresenceSelector.cpp  PresenceSelector.h  ProfileAvatarWidget.cpp  ProfileAvatarWidget.h  RecordingSettingsDialog.cpp  RecordingSettingsDialog.h  SettingsDialog.cpp  SettingsDialog.h  StyleHelper.cpp  StyleHelper.h  ThemeHelper.cpp  ThemeHelper.h  ThemePreviewDialog.cpp  ThemePreviewDialog.h  (+8 more)
client/src/video/: H264Decoder.cpp  H264Decoder.h  H264Encoder.cpp  H264Encoder.h  ScreenCapture.cpp  ScreenCapture.h  VideoCapture.cpp  VideoCapture.h
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD  README.md
packaging/linux/: build-appimage.sh  opensource-communicator.desktop
packaging/windows/: build-windows.sh
server/: .gitignore  CMakeLists.txt  README.md
server/resources/: server.conf.example
server/src/: main.cpp
server/src/addressbook/: AddressBookManager.cpp  AddressBookManager.h
server/src/auth/: AuthManager.cpp  AuthManager.h
server/src/calls/: CallManager.cpp  CallManager.h  CallSession.cpp  CallSession.h  HoldMusicPlayer.cpp  HoldMusicPlayer.h
server/src/conference/: ConferenceManager.cpp  ConferenceManager.h
server/src/db/: Database.cpp  Database.h
server/src/history/: HistoryManager.cpp  HistoryManager.h
server/src/im/: ImManager.cpp  ImManager.h  PresenceManager.cpp  PresenceManager.h
server/src/network/: WsServer.cpp  WsServer.h  WsSession.cpp  WsSession.h
server/src/protocol/: CommandDispatcher.cpp  CommandDispatcher.h  ProtocolTypes.h
server/src/server/: Config.cpp  Config.h  Server.cpp  Server.h
server/src/session/: SessionManager.cpp  SessionManager.h  UserSession.cpp  UserSession.h
server/src/sms/: SmsManager.cpp  SmsManager.h
server/tools/: generate_hold_music.py
